--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dequal": "^2.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
